Backward agent now able to solve level 0 and 1.

--- a/backward_agent.ipynb
+++ b/backward_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'game' from '/home/paul/Documents/ETH/RLforGames/WearhouseKeeper/SokobanSolver/game.py'>"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +80,13 @@
     "        \n",
     "    def train(self, number_of_episodes, start, end):\n",
     "        wins=0\n",
+    "        moves = []\n",
     "        for episode in tqdm(range(number_of_episodes)):\n",
     "            # create new game instance\n",
     "            ind = random.randint(start, end)\n",
     "            env = game.ReverseGame(game.Game(level_id=ind), disable_prints=True)\n",
+    "            if episode % 100 == 0:\n",
+    "                moves.append(env.player_position)\n",
     "            state, reward, done = env.state(gamma=self.gamma)\n",
     "            # print(f\"state: {state}, reward: {reward}, done: {done}\")\n",
     "            \n",
@@ -95,10 +98,12 @@
     "                \n",
     "                # calculate next action according to policy\n",
     "                [action, next_state, next_state_tensor, next_value, next_reward, next_done] = self.policy(env)\n",
+    "                if episode % 100 == 0:\n",
+    "                    moves.append(action)\n",
     "                # print(f\"reward from step: {next_reward}\")\n",
     "                \n",
     "                if action is None: # agent is stuck, we are in the same state as before and use these to make the TD(0) updates\n",
-    "                    assert(next_value is None and done is None and reward is None and next_state_tensor is None and next_state is None)\n",
+    "                    assert(next_value is None and next_done is None and next_reward is None and next_state_tensor is None and next_state is None)\n",
     "                    next_value = value\n",
     "                    next_state_tensor = state\n",
     "                    next_done = 1\n",
@@ -122,53 +127,70 @@
     "                    if len(legal_moves) == 0: \n",
     "                        break\n",
     "                    else:\n",
-    "                        state, reward, done = env.play(random.choice(legal_moves), gamma=self.gamma)\n",
+    "                        action = random.choice(legal_moves)\n",
+    "                        if episode % 100 == 0:\n",
+    "                            moves[-1] = action\n",
+    "                        state, reward, done = env.play(action, gamma=self.gamma)\n",
     "                else:\n",
     "                    state = next_state\n",
     "                    done = next_done\n",
     "                    reward = next_reward\n",
-    "                    s, r, d = env.play(action, gamma=self.gamma)\n",
-    "                    assert(state == s and done == d and reward == r)\n",
+    "                    if(action != None): # make the game step if there is a possible move, if there is no possible move, game will end\n",
+    "                        s, r, d = env.play(action, gamma=self.gamma)\n",
+    "                        if not (state == s and done == d and reward == r):\n",
+    "                            env.disable_prints=False\n",
+    "                            env.print_board()\n",
+    "                            print(env.turn)\n",
+    "                            print(f\"print form top: {state}, {reward}, {done}\")\n",
+    "                            print(f\"print form bot: {s}, {r}, {d}\")\n",
+    "                        assert(state == s and done == d and reward == r)\n",
     "                wins+=reward\n",
     "            \n",
     "            # update learning rate\n",
     "            self.alpha = self.alpha * self.discount\n",
     "        print(f\"solved {wins}/{number_of_episodes}\")\n",
+    "        file_path = \"run.json\"\n",
+    "        json_data = json.dumps(moves)\n",
+    "        with open(file_path, \"w\") as file:\n",
+    "            file.write(json_data)\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/500 [00:00<?, ?it/s]\n"
+      "100%|██████████| 300/300 [00:19<00:00, 15.06it/s]"
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[249], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m      4\u001b[0m backwardagent \u001b[38;5;241m=\u001b[39m BackwardAgent()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mbackwardagent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber_of_episodes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[244], line 43\u001b[0m, in \u001b[0;36mBackwardAgent.train\u001b[0;34m(self, number_of_episodes, start, end)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# print(f\"reward from step: {next_reward}\")\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m action \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: \u001b[38;5;66;03m# agent is stuck, we are in the same state as before and use these to make the TD(0) updates\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m(next_value \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m done \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m reward \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m next_state_tensor \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m next_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     44\u001b[0m     next_value \u001b[38;5;241m=\u001b[39m value\n\u001b[1;32m     45\u001b[0m     next_state_tensor \u001b[38;5;241m=\u001b[39m state\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solved 0/300\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# level 0 works now\n",
-    "torch.manual_seed(42)\n",
-    "random.seed(42)\n",
-    "np.random.seed(42)\n",
+    "torch.manual_seed(40)\n",
+    "random.seed(40)\n",
+    "np.random.seed(40)\n",
     "backwardagent = BackwardAgent()\n",
-    "backwardagent.train(number_of_episodes=500, start=1, end=1)"
+    "backwardagent.train(number_of_episodes=300, start=3, end=3)"
    ]
   }
  ],
